gccida/g0/classify_argument
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/classify_argument/src/i386.c:2106:25: error: must use 'enum' tag to refer to type 'machine_mode'
int  classify_argument( machine_mode mode, tree type, x86_64_reg_class *classes, int bit_offset) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/classify_argument/src/i386.c:2106:55: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
int  classify_argument( machine_mode mode, tree type, x86_64_reg_class *classes, int bit_offset) 
                                                      ^
                                                      enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/classify_argument/src/i386.c:2112:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class *v8; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/classify_argument/src/i386.c:2113:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class *v9; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/classify_argument/src/i386.c:2117:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class *v13; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/classify_argument/src/i386.c:2118:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class *v14; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/classify_argument/src/i386.c:2119:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class *v15; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/classify_argument/src/i386.c:2120:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class subclasses[4]; // [rsp+20h] [rbp-C0h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/classify_argument/src/i386.c:2189:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( type_0->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/classify_argument/src/i386.c:2223:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( field->common.type->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/classify_argument/src/i386.c:2242:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( type->common.type->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/classify_argument/src/i386.c:2269:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( type_1->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/classify_argument/src/i386.c:2288:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( field->common.type->block.abstract_origin) >> 1), 
  ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/classify_argument/src/obj/i386.o] Error 1
